Fixing auto wrap support for legacy browsers when vAlign is active (and cols defined)

--- a/grid-classes.scss
+++ b/grid-classes.scss
@@ -344,7 +344,7 @@ $fullPrefix: if($grid-prefix != '', $grid-prefix+'-', '');
 				}
 			}
 
-			&--wrap[class*='grid--vAlign'][class*='grid--cols'] {
+			&[class*='grid--vAlign'][class*='grid--cols'] {
 				> * {
 					display: inline-block;
 					margin-right: -4px;
